--- a/hibernate-crud-example/pom.xml
+++ b/hibernate-crud-example/pom.xml
@@ -21,6 +21,18 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>8.0.30</version>
 		</dependency>
+		<dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.3.1</version> <!-- or the latest version available -->
+</dependency>
+
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.6.0.Final</version> <!-- or the latest version available -->
+</dependency>
+
 		
 		
   </dependencies>
